--- a/talk2me-dotnet-api.csproj
+++ b/talk2me-dotnet-api.csproj
@@ -8,4 +8,9 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MQTTnet" Version="5.0.1.1416" />
+      <PackageReference Include="MQTTnet.AspNetCore" Version="5.0.1.1416" />
+    </ItemGroup>
+
 </Project>
