--- a/talk2me-dotnet-api.csproj
+++ b/talk2me-dotnet-api.csproj
@@ -11,6 +11,11 @@
     <ItemGroup>
       <PackageReference Include="MQTTnet" Version="5.0.1.1416" />
       <PackageReference Include="MQTTnet.AspNetCore" Version="5.0.1.1416" />
+      <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+      <PackageReference Include="Serilog.Enrichers.Environment" Version="3.0.1" />
+      <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+      <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
